<resources>
    <string name="app_name">oblig2_loans</string>
    <string name="loan_type">Loan type</string>
    <string name="linear_mortgage">Linear mortgage</string>
    <string name="fixed_rate_mortgage">Fixed-rate mortgage</string>
    <string name="loan_amount">Loan amount</string>
    <string name="interest_rate">Interest rate (%)</string>
    <string name="down_payment_time_years">Down payment time (Years)</string>
    <string name="settings">Settings</string>
    <string name="settings_header">Choose columns to show it results</string>
    <string name="calculate">Calculate</string>
    <string name="settings_remaining">Remaining debt</string>
    <string name="settings_deduction">Deduction</string>
    <string name="settings_interest">Interest</string>
    <string name="settings_term">Term amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="year">Year</string>
    <string name="toastCheck">All the fields must be filled</string>
</resources>